--- a/src/css/index.css
+++ b/src/css/index.css
@@ -216,3 +216,187 @@ h1 {
     width: 111px;
   }
 }
+
+/* Footer
+----------------------------------------------------------------------------- */
+
+.footer {
+  box-sizing: border-box;
+  margin: 0 auto;
+  padding-top: 36px;
+  background: #393939;
+  position: relative;
+}
+
+.footer h2 {
+  color: #dbdbdb;
+}
+
+.footer .footer-wrapper {
+  display: inline-block;
+  vertical-align: top;
+}
+
+.footer .social-links {
+  display: inline-block;
+  vertical-align: bottom;
+  margin-bottom: 24px;
+  margin-right: 24px;
+}
+
+.footer .social-links .links-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  font-size: 0;
+}
+
+.footer .social-links .link {
+  display: inline-block;
+  vertical-align: top;
+  margin-right: 10px;
+}
+
+.footer .social-links a {
+  display: block;
+  width: 44px;
+  height: 44px;
+  text-indent: 100%;
+  overflow: hidden;
+  background-image: url("../images/social-icons.png");
+}
+
+.footer .social-links .email {
+  background-position: 0 0;
+}
+
+.footer .social-links .twitter {
+  background-position: 0 44px;
+}
+
+.footer .social-links .facebook {
+  background-position: 0 88px;
+}
+
+.footer .social-links .linkedin {
+  background-position: 0 bottom;
+}
+
+.footer .social-links .email:hover {
+  background-position: right 0;
+}
+
+.footer .social-links .twitter:hover {
+  background-position: right 44px;
+}
+
+.footer .social-links .facebook:hover {
+  background-position: right 88px;
+}
+
+.footer .social-links .linkedin:hover {
+  background-position: right bottom;
+}
+
+.footer .subscribe-form {
+  display: inline-block;
+  vertical-align: bottom;
+  width: 210px;
+  margin-bottom: 24px;
+  color: #b2b2b2;
+  font-size: 12px;
+  font-family: 'Mariad Pro', 'Open Sans', Arial, Tahoma, sans-serif;
+}
+
+.footer .subscribe-form .label {
+  display: block;
+  margin-bottom: 8px;
+}
+
+.footer .subscribe-form input {
+  display: inline-block;
+  vertical-align: middle;
+  width: 122px;
+  height: 18px;
+  font-size: 14px;
+  line-height: 18px;
+  padding: 4px 6px;
+  border: 0;
+  background: #0d0d0d;
+  color: inherit;
+  font-family: Arial, Tahoma, sans-serif;
+  outline: none;
+}
+
+.footer .subscribe-form button {
+  display: inline-block;
+  vertical-align: middle;
+  height: 26px;
+  font-size: 12px;
+  line-height: 26px;
+  text-align: center;
+  padding: 0 10px;
+  border: 1px solid #1f1f1f;
+  background: #1f6294;
+  border-radius: 3px;
+  box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.25);
+  color: #eaeaea;
+  font-family: 'Myriad Pro', 'Open Sans', Arial, Tahoma, sans-serif;
+}
+
+.footer .partners {
+  display: inline-block;
+  vertical-align: top;
+  margin-bottom: 24px;
+}
+
+.footer .partners .partners-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  white-space: nowrap;
+}
+
+.footer .partners .partner-item {
+  display: inline-block;
+  vertical-align: middle;
+  margin-right: 22px;
+}
+
+.footer .partners a {
+  display: block;
+}
+
+.footer .copyright {
+  font-size: 12px;
+  color: #c3c3c3;
+  padding: 11px 0 5px;
+  text-align: right;
+  white-space: nowrap;
+  border-top: 1px solid rgba(87, 87, 87, 0.7);
+  box-shadow: 0 -1px 0 0 #262626;
+}
+
+@media (min-width: 400px) {
+  .footer .copyright {
+    text-align: center;
+  }
+}
+
+@media (min-width: 670px) {
+  .footer .footer-wrapper {
+    margin-right: 80px;
+  }
+
+  .footer .social-links,
+  .footer .subscribe-form {
+    display: block;
+  }
+}
+
+@media (min-width: 870px) {
+  .footer .social-links,
+  .footer .subscribe-form {
+    display: inline-block;
+  }
+}
