--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,3 +1,23 @@
+@font-face {
+  font-family: 'Myriad Pro';
+  src: url('../fonts/MyriadPro-Bold.eot');
+  src: url('../fonts/MyriadPro-Bold.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/MyriadPro-Bold.woff') format('woff'),
+  url('../fonts/MyriadPro-Bold.ttf') format('truetype');
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Myriad Pro';
+  src: url('../fonts/MyriadPro-Regular.eot');
+  src: url('../fonts/MyriadPro-Regular.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/MyriadPro-Regular.woff') format('woff'),
+  url('../fonts/MyriadPro-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
 html {
 overflow: auto;
 }
@@ -17,6 +37,7 @@ body {
 
 .page-wrapper {
   height: auto;
+  overflow: hidden;
 }
 
 .content-wrapper {
@@ -31,7 +52,7 @@ body {
 
 h1 {
   font-size: 28px;
-  margin: 0 0 1.5em;
+  margin: 0;
 }
 
 @media (min-width: 480px) {
@@ -165,10 +186,25 @@ h1 {
 }
 
 .intro {
-  text-align: center;
-  padding: 20px 0;
+  padding-bottom: 20px;
   background: url("../images/bg_intro.png") repeat 0 0 #d8cec8;
+}
+
+.intro .title-wrapper {
+  position: relative;
+  padding: 20px 0 30px;
+  padding-left: 20px;
+  max-width: 320px;
   white-space: nowrap;
+}
+
+.intro .icon-badge {
+  position: absolute;
+  top: -20%;
+  right: -6%;
+  display: block;
+  width: 70px;
+  height: auto;
 }
 
 .intro .logo {
@@ -176,18 +212,18 @@ h1 {
   vertical-align: middle;
   width: 42px;
   height: auto;
-  margin-right: 11px;
+  margin-right: 6px;
 }
 
 .intro .title {
   display: inline-block;
   vertical-align: middle;
   margin: 0;
-  margin-top: 0.2em;
   font-size: 28px;
   color: #983904;
   text-shadow: 0 1px 0 #fff;
   font-family: 'Myriad Pro', Arial, Helvetica, sans-serif;
+  font-weight: bold;
 }
 
 @supports(-webkit-background-clip: text) {
@@ -199,23 +235,122 @@ h1 {
   }
 }
 
+@media (min-width: 420px) {
+  .intro .title-wrapper {
+    max-width: 400px;
+  }
+  .intro .title {
+    font-size: 40px
+  }
+
+  .intro .icon-badge {
+    right: 0;
+  }
+}
+
 @media (min-width: 480px) {
+  .intro .title-wrapper {
+    max-width: 420px;
+  }
   .intro .logo {
     width: 60px;
   }
 }
 
 @media (min-width: 768px) {
+  .intro {
+    padding-left: 56px;
+  }
+
+  .intro .title-wrapper {
+    max-width: 684px;
+  }
+
   .intro .logo {
     width: 88px;
+    padding-right: 30px;
+  }
+
+  .intro .icon-badge {
+    width: 94px;
+  }
+
+  .intro .title {
+    font-size: 66px;
   }
 }
 
 @media (min-width: 1000px) {
+  .intro .title-wrapper{
+    max-width: 778px;
+    margin: 0 auto;
+  }
+
   .intro .logo {
     width: 111px;
   }
+
+  .intro .title {
+    font-size: 76px;
+  }
 }
+
+.platforms {
+  display: inline-block;
+  width: 100%;
+  text-align: center;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  white-space: nowrap;
+}
+
+.platforms .platform {
+  display: inline-block;
+  text-align: center;
+}
+
+.platforms a {
+  display: inline-block;
+  font-size: 12px;
+  color: #32353a;
+  text-decoration: none;
+}
+
+.platforms a:visited {
+  color: #d65600;
+}
+
+.platforms .platform a::before {
+  content: '';
+  display: block;
+  width: 80px;
+  height: 52px;
+  background-image: url('../images/app-platforms.png');
+}
+
+.platforms .platform.ipad a::before {
+  background-position: 0 201px;
+}
+
+.platforms .platform.android a::before {
+  background-position: 0 133px;
+}
+
+.platforms .platform.kindle a::before {
+  background-position: 0 66px;
+}
+
+.platforms a:visited::before {
+  background-position-x: 45px;
+}
+
+@media (min-width: 768px) {
+  .platforms a {
+    font-size: 14px;
+  }
+}
+
 
 /* Footer
 ----------------------------------------------------------------------------- */
@@ -306,6 +441,7 @@ h1 {
   color: #b2b2b2;
   font-size: 12px;
   font-family: 'Mariad Pro', 'Open Sans', Arial, Tahoma, sans-serif;
+  font-weight: normal;
 }
 
 .footer .subscribe-form .label {
