--- a/src/css/index.css
+++ b/src/css/index.css
@@ -32,6 +32,7 @@ body {
 body {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 16px;
+  font-weight: 400;
   color: #575757;
 }
 
@@ -52,8 +53,10 @@ body {
 
 h1,
 h2,
+h3,
 p {
   margin: 0;
+  font-weight: inherit;
 }
 
 h1 {
@@ -64,9 +67,22 @@ h2 {
   font-size: 22px;
 }
 
-p {
-  font-size: 14px;
-  line-height: 1.4em;
+h3 {
+  font-style: italic;
+  font-size: 18px;
+  line-height: 1.3em;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+@media (min-width: 420px) {
+  h2 {
+    font-size: 24px;
+  }
 }
 
 @media (min-width: 480px) {
@@ -79,11 +95,20 @@ p {
   h1 {
     font-size: 45px;
   }
+
 }
 
 @media (min-width: 1000px) {
   h1 {
     font-size: 76px;
+  }
+
+  h2 {
+    font-size: 34px;
+  }
+
+  p {
+    font-size: 18px;
   }
 }
 
@@ -146,6 +171,7 @@ p {
 .features {
   padding: 20px 0;
   background-image: url("../images/bg_features.png");
+  background-size: contain;
   background-color: #4b3025;
   font-size: 20px;
   line-height: 26px;
@@ -200,9 +226,20 @@ p {
 }
 
 .intro {
+  position: relative;
   padding-bottom: 20px;
-  background:  url("../images/content-bg.png") repeat-x 0 100%,
-  url("../images/bg_intro.png") repeat 0 0;
+  background: url("../images/bg_intro.png") repeat 0 0;
+}
+
+.intro::after {
+  content: '';
+  display: block;
+  position: absolute;
+  bottom: -10px;
+  left: 0;
+  width: 100%;
+  height: 25px;
+  background: url('../images/content-bg.png') repeat-x 0 0;
 }
 
 .intro .title-wrapper {
@@ -243,8 +280,8 @@ p {
 
 @supports(-webkit-background-clip: text) {
   .intro .title {
-    background: linear-gradient(#b87e66, #86432f); 
-                -webkit-background-clip: text; 
+    background: linear-gradient(#b87e66, #86432f);
+                -webkit-background-clip: text;
                 -webkit-text-fill-color: transparent;
                 text-shadow: none;
   }
@@ -366,38 +403,154 @@ p {
   }
 }
 
+.detail-info {
+  padding: 24px 16px 0 20px;
+  background: url("../images/bg_top.png") repeat 0 0 / cover;
+}
+
 .detail-info h2 {
   margin-bottom: 16px;
   color: #915542;
 }
 
+.detail .detail-text {
+  font-size: 14px;
+  line-height: 1.4em;
+}
+
 .details-list {
   list-style: none;
-  margin: 0;
   padding: 0;
+  border: none;
+}
+
+.details-list .detail {
+  display: inline-block;
+  position: relative;
+  vertical-align: top;
+  min-height: 80px;
+  padding-left: 98px;
+  margin-bottom: 30px;
 }
 
 .details-list .detail::before {
   content: "";
   display: inline-block;
-  width: 136px;
-  height: 136px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 94px;
+  height: 80px;
 }
 
 .details-list .detail.google-calendar::before {
-  background: url("../gallery/google-calendar.png") no-repeat;
+  background: url("../gallery/google-calendar.png") no-repeat 0 0 / contain;
 }
 
 .details-list .detail.dropbox::before {
-  background: url("../gallery/dropbox.png") no-repeat;
+  background: url("../gallery/dropbox.png") no-repeat 0 0 / contain;
 }
 
 .details-list .detail.charts::before {
-  background: url("../gallery/charts.png") no-repeat;
+  background: url("../gallery/charts.png") no-repeat 0 0 / contain;
 }
 
 .details-list .detail.planned::before {
-  background: url("../gallery/pvsa.png") no-repeat;
+  background: url("../gallery/pvsa.png") no-repeat 0 0 / contain;
+}
+
+@media (min-width: 420px) {
+  .details-list .detail {
+    padding-left: 146px;
+  }
+  .details-list .detail::before {
+    width: 130px;
+    height: 110px;
+  }
+}
+
+@media (min-width: 768px) {
+  .details-list .detail {
+    width: 26%;
+  }
+  .details-list .detail:nth-child(odd) {
+    margin-right: 40px;
+  }
+}
+
+@media (min-width: 1000px) {
+  .details-list .detail {
+    padding-left: 182px;
+    width: 30%;
+  }
+
+  .details-list .detail:nth-child(odd) {
+    margin-right: 14px;
+  }
+
+  .details-list .detail::before {
+    width: 172px;
+    height: 154px;
+  }
+  .detail .detail-text {
+    font-size: 18px;
+  }
+}
+
+.comments {
+  position: relative;
+  padding: 20px 0 10px;
+  background-color: #f8f7f3;
+}
+
+.comments button {
+  position: absolute;
+  bottom: -24px;
+  left: calc(50% - 83px);
+  display: block;
+  width: 186px;
+  height: 40px;
+  border: none;
+  padding: 0;
+  background: url('../images/bg_readmore.png') no-repeat 0 0 / 100%;
+  border-radius: 20px;
+  z-index: 1;
+  font-size: 18px;
+  font-weight: bold;
+  color: #fff;
+}
+
+.comments-list .comment {
+  display: inline-block;
+  vertical-align: top;
+  margin-bottom: 30px;
+}
+
+.comment .comment-text {
+  font-size: 16px;
+  line-height: 1.5em;
+}
+
+.comment h3 {
+  color: #8f4f35;
+  text-align: right;
+}
+
+@media (min-width: 1000px) {
+  .comments-list .comment {
+    display: inline-block;
+    vertical-align: top;
+    width: 30%;
+  }
+
+  .comments-list .comment:nth-child(3n + 2) {
+    margin: 0 38px 30px;
+  }
+
+  .comments button {
+    width: 230px;
+    height: 50px;
+  }
 }
 
 
@@ -408,12 +561,13 @@ p {
   box-sizing: border-box;
   margin: 0 auto;
   padding-top: 36px;
-  background: #393939;
+  background: url("../images/rw-list-bg.png") repeat-x 0 0 #393939;
   position: relative;
 }
 
 .footer h2 {
   color: #dbdbdb;
+  margin-bottom: 16px;
 }
 
 .footer .footer-wrapper {
@@ -485,7 +639,7 @@ p {
 .footer .subscribe-form {
   display: inline-block;
   vertical-align: bottom;
-  width: 210px;
+  /* width: 210px; */
   margin-bottom: 24px;
   color: #b2b2b2;
   font-size: 12px;
@@ -501,7 +655,7 @@ p {
 .footer .subscribe-form input {
   display: inline-block;
   vertical-align: middle;
-  width: 122px;
+  width: 134px;
   height: 18px;
   font-size: 14px;
   line-height: 18px;
@@ -520,7 +674,7 @@ p {
   font-size: 12px;
   line-height: 26px;
   text-align: center;
-  padding: 0 10px;
+  padding: 0 8px;
   border: 1px solid #1f1f1f;
   background: #1f6294;
   border-radius: 3px;
